--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           console.log(button);
 
           divOutput.innerHTML = labelInput.value; // use value to copy context to the div's content
+          alert("Here is your number: " + labelInput.value);
         }
         spin(); //calls the function spin() which can be declared at the bottom
         setTimeout(stopSpin, 500);
