add comment line 96

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         function stopSpin() {
           button.innerHTML = "Calculate!"; // make the spinner stop after 0.5seconds
         }
-      }
+      } //this bracket closes the "onclick" event, leave it here!
     </script>
   </body>
 </html>
