add id's to the select element options

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <!-- Start writing content here -->
           <input type="text" name="" id="input" />
           <select id="select">
-            <option value="plus">+</option>
-            <option value="minus">-</option>
-            <option value="multply">*</option>
-            <option value="divide">/</option>
+            <option id="plus" value="plus">+</option>
+            <option id="minus" value="minus">-</option>
+            <option id="multiply" value="multply">*</option>
+            <option id="divide" value="divide">/</option>
           </select>
           <input type="text" name="" id="input2" /> <br />
           <br />
